Link container and npm packages automatically - Add helper script to run nodemon in case of linked app for container

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "dependencies": {
     "@nebulario/core-config": "1.70.2-master",
-    "@nebulario/core-json": "1.70.1-master",
+    "@nebulario/core-json": "^1.70.1-master",
     "@nebulario/core-plugin-request": "1.70.8-master",
     "@nebulario/core-process": "1.70.1-master",
     "axios": "^0.18.0",
